--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,10 @@
-<h2 id="title">Welcome to Ember</h2>
+
+<div class="ui menu">
+  <div class="brand item">Ember Flex Table</div>
+  {{link-to "index" "index" class="item"}}
+  {{link-to "inline" "inline" class="item"}}
+  {{link-to "bootstrap" "bootstrap" class="item"}}
+  {{link-to "semantic-ui" "semantic-ui" class="item"}}
+</div>
 
 {{outlet}}
