--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,15 +1,16 @@
-
-{{#flex-table
-  columns=application.columns
-  tableId="people"
-  rowData=application.rowData as |row|}}
-  <tr>
-    <td>{{row.id}}</td>
-    <td>{{row.firstName}}</td>
-    <td>{{row.lastName}}</td>
-    <td>{{row.company}}</td>
-    <td>{{row.address}}</td>
-    <td>{{row.phoneNumber}}</td>
-    <td>{{row.email}}</td>
-  </tr>
-{{/flex-table}}
+<div style="position:relative;top:100px;left:150px;">
+  {{#flex-table
+    columns=application.columns
+    tableId="people"
+    rowData=application.rowData as |row|}}
+    <tr>
+      <td>{{row.id}}</td>
+      <td>{{row.firstName}}</td>
+      <td>{{row.lastName}}</td>
+      <td>{{row.company}}</td>
+      <td>{{row.address}}</td>
+      <td>{{row.phoneNumber}}</td>
+      <td>{{row.email}}</td>
+    </tr>
+  {{/flex-table}}
+</div>
